force-app/main/default/objects/DocGen_Job__c/fields/Data_Cache_CV__c.field-meta.xml
<CustomField>
    <fullName>Data_Cache_CV__c</fullName>
    <description>ContentVersion ID of the bulk-queried data cache JSON file. Populated during batch start() for V3 configs.</description>
    <label>Data Cache CV</label>
    <length>18</length>
    <type>Text</type>
</CustomField>