force-app/main/default/objects/DocGen_Job__c/fields/Merge_Only__c.field-meta.xml
<CustomField>
    <fullName>Merge_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, batch generates HTML only (no individual PDFs per record). A single merged PDF is produced at the end and the submitter is emailed a download link.</description>
    <label>Merge Only</label>
    <type>Checkbox</type>
</CustomField>