force-app/main/default/objects/DocGen_Job__c/fields/Merged_PDF_CV__c.field-meta.xml
<CustomField>
    <fullName>Merged_PDF_CV__c</fullName>
    <description>ContentVersion ID of the final merged PDF when merge mode is enabled.</description>
    <label>Merged PDF CV</label>
    <length>18</length>
    <type>Text</type>
</CustomField>